# matlab_llvm_ide_linux

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/resources/: matforge.desktop  theme.css
crates/app/src/: app_state.rs  block_library.rs  e2e.rs  editor_view.rs  flow_render.rs  flowchart_view.rs  highlight.rs  icons.rs  main.rs  mermaid_render.rs  mflowlink_window.rs  palette.rs  plot_render.rs  process.rs  runner.rs  services_impl.rs  settings_view.rs  statechart_window.rs  theme_css.rs  ui.rs  video_view.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  observable.rs  theme.rs
crates/core/src/models/: compiler.rs  console.rs  debug.rs  editor.rs  ids.rs  mod.rs  plot.rs  project.rs  status.rs  workspace.rs
crates/core/src/models/flowchart/: document.rs  edge.rs  mod.rs  node.rs  palette.rs
crates/core/src/services/: brackets.rs  chart_trace.rs  compiler.rs  dap.rs  filesystem.rs  flowchart_codec.rs  fuzzy.rs  highlighter.rs  markdown.rs  media.rs  mermaid.rs  mod.rs  parsers.rs  preferences.rs  run.rs  sentinels.rs  settings.rs  sim_trace.rs  system_bridge.rs
crates/core/src/services/highlighter/: tables.rs
crates/core/src/viewmodels/: activity_bar.rs  appearance.rs  breakpoints.rs  console.rs  debug.rs  editor.rs  flowchart.rs  layout.rs  main.rs  mflowlink.rs  mod.rs  plots.rs  project_explorer.rs  repl.rs  search.rs  statechart.rs  status_bar.rs  toast.rs  toolbar.rs  workspace.rs
crates/core/tests/: integration.rs
docs/: architecture.md  build_and_run.md  compiler_integration.md  e2e.md  packaging.md  roadmap.md  testing.md  ui_ux.md
e2e/: harness.py  run_e2e.py
packaging/: io.github.matforge.MatForge.yaml
