[workspace]
resolver = "2"
members = ["crates/core", "crates/app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Leonardo Araujo dos Santos <leonardoaraujo.santos@gmail.com>"]
license = "MIT"
repository = "https://github.com/leonardoaraujo/matlab_llvm_ide_linux"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
matforge-core = { path = "crates/core" }

[profile.release]
lto = "thin"
codegen-units = 1
