[package]
name = "matforge-core"
description = "GTK-free MVVM core (models, services, view models) for the MatForge MATLAB-LLVM IDE."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
